fix: vertical alignment in transaction table (#250)

--- a/src/app/router/Popup/styles.scss
+++ b/src/app/router/Popup/styles.scss
@@ -1,5 +1,6 @@
 #popup {
   min-width: 350px;
+  max-width: 540px;
   min-height: 420px; /* Needed to expand the user menu. */
 
   #options__button {
